<resources>
    <string name="app_name">PC02_DSM_Delgado-Linares</string>
    <string name="valbtlogin">LOGIN</string>
    <string name="valetemaillogin">Enter email</string>
    <string name="valetpassworllogin">Enter password</string>
    <string name="valetfullname">Enter fullname</string>
    <string name="valetcountry">Enter country</string>
    <string name="valetemail">Enter email</string>
    <string name="valetpassword">Enter password</string>
    <string name="valbtsaveregister">SAVE</string>
    <string name="valbtregister">REGISTER</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ingresos</string>
    <string name="menu_gallery">Gastos</string>
    <string name="menu_slideshow">Resumen</string>
    <string name="valtitlecustomer">Registar cliente</string>
    <string name="valbtsavecustomer">SAVE</string>
    <string name="etFecha">Ingresar fecha</string>
    <string name="etDescripcion">Ingresar una descripción</string>
    <string name="etMonto">Ingresar Monto</string>
    <string name="btRegistrar">Ingresar</string>

    <string name="etFechaGasto">Ingresar fecha</string>
    <string name="etDescripcionGasto">Ingresar una descripción</string>
    <string name="etMontoGasto">Ingresar Monto</string>
    <string name="btRegistrarGasto">Gastar</string>

    <string name="valetdescripcion">Descripción</string>
    <string name="valetfecha">Fecha</string>
    <string name="valetmonto">Monto</string>
</resources>